--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@elysiajs/cors": "^0.8.0",
     "@elysiajs/html": "^0.8.0",
     "dotenv": "^16.4.1",
     "elysia": "^0.8.13",
