--- a/config/compose.yml
+++ b/config/compose.yml
@@ -23,7 +23,7 @@ services:
       - ollama_data:/root/.ollama
     networks:
       - echo_net
-    command: "serve & ollama pull qwen2.5:1.5b && echo 'Image pulled'"
+    command: "serve"
 
 
 networks:
@@ -32,4 +32,3 @@ networks:
 
 volumes:
   ollama_data:
-
