--- a/server/pages/assets/manifest.json
+++ b/server/pages/assets/manifest.json
@@ -12,25 +12,25 @@
   ],
   "icons": [
     {
-      "src": "/assets/icons/manifest-icon-192.maskable.png",
+      "src": "/assets/icons/192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/assets/icons/manifest-icon-192.maskable.png",
+      "src": "/assets/icons/192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/assets/icons/manifest-icon-512.maskable.png",
+      "src": "/assets/icons/512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/assets/icons/manifest-icon-512.maskable.png",
+      "src": "/assets/icons/512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
